# fastapi-ml-skeleton

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  backend.dockerfile  docker-compose-dev.yml  docker-compose.dev.yml  requirements.txt
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  setup.cfg  tox.ini
backend/fastapi_skeleton/: gunicorn_conf.py  main.py
backend/fastapi_skeleton/api/errors/: validation_error.py
backend/fastapi_skeleton/api/routes/: heartbeat.py  prediction.py  router.py
backend/fastapi_skeleton/core/: config.py  event_handlers.py  messages.py  security.py
backend/fastapi_skeleton/models/: __init__.py  payload.py
backend/fastapi_skeleton/services/: models.py
backend/tests/: conftest.py
backend/tests/test_api/: test_api_auth.py  test_heartbeat.py  test_prediction.py
backend/tests/test_service/: test_models.py
compose/backend/: backend.dockerfile  prestart.sh  start-reload.sh  start.sh
compose/backend/scripts/: format.sh  lint.sh  test.sh
docker/: requirements.txt  start-reload.sh  start.sh
fastapi_skeleton/: gunicorn_conf.py
