[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["Abdullah Mohammed <abdullahabdelrhim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.48.0"
numpy = "^1.18.1"
scikit-learn = "^0.22.1"
joblib = "^0.14.1"
gunicorn = "^20.0.4"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3"
autoflake = "^1.3"
pydevd-pycharm = "^201.6487"

wemake-python-styleguide = "^0.13"
mypy = "^0.770"
flake8-fixme = "^1.1"

pytest = "^5.4"
pytest-cov = "^2.8"
pytest-asyncio = "^0.10.0"
pytest-xdist = "^1.31"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
